experimentData/CFR-detailedExperimentData/errorSamples/recompilationFailures/80/log-1-80.log

Test.java:176: error: illegal start of expression
                        ** case 81:
                        ^
Test.java:176: error: illegal start of expression
                        ** case 81:
                         ^
Test.java:176: error: illegal start of expression
                        ** case 81:
                           ^
Test.java:180: error: illegal start of statement
                        case 82: {
                        ^
Test.java:282: error: illegal start of expression
                                                    ** case 45:
                                                    ^
Test.java:282: error: illegal start of expression
                                                    ** case 45:
                                                     ^
Test.java:282: error: illegal start of expression
                                                    ** case 45:
                                                       ^
Test.java:286: error: illegal start of statement
                                                    default: {
                                                    ^
Test.java:338: error: illegal start of expression
                                    ** GOTO lbl8
                                    ^
Test.java:338: error: illegal start of expression
                                    ** GOTO lbl8
                                     ^
Test.java:338: error: ';' expected
                                    ** GOTO lbl8
                                           ^
Test.java:338: error: not a statement
                                    ** GOTO lbl8
                                            ^
Test.java:338: error: ';' expected
                                    ** GOTO lbl8
                                                ^
13 errors

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

